# agentic-stack

./: .env.example  .gitignore  AGENT.md  ARCHITECTURE.md  README.md  pyproject.toml
.agent/personal/: preferences.json
.agent/semantic/: lessons.jsonl
app/: __init__.py  main.py
app/agents/: __init__.py  base.py  customer_service_agent.py  inventory_agent.py  memory.py  orchestrator.py  recommendation_agent.py  tools.py
app/api/: deps.py
app/api/routes/: __init__.py  agents.py  auth.py  carts.py  inventory.py  orders.py  products.py  search.py
app/core/: config.py  logging.py  security.py
app/db/: base.py  init_db.py  session.py
app/models/: __init__.py  cart.py  event.py  inventory.py  order.py  product.py  user.py
app/schemas/: cart.py  inventory.py  order.py  product.py  search.py
app/services/: auth_service.py  cart_service.py  catalog_service.py  inventory_service.py  order_service.py  recommendation_service.py  search_service.py
docs/: article.html  index.html  research.html  styles.css
