[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-ecommerce"
version = "0.1.0"
description = "Enterprise-grade reference implementation for an agentic e-commerce harness"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "sqlalchemy>=2.0.40",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.8.0",
  "python-jose[cryptography]>=3.4.0",
  "passlib[bcrypt]>=1.7.4",
  "python-multipart>=0.0.20",
  "email-validator>=2.2.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
